@@ -21,3 +21,6 @@ NUMBER OF FILES=Number of Files
 SIZE=Size
 WRITABLE=Writable
 UNWRITABLE=Unwritable
+
+COM_CACHE_CONFIGURATION=Cache Manager Settings
+COM_CACHE_BACK_CACHE_MANAGER=Return to Cache Manager
